src/styles/_images.scss
.image-grid img {
  width: 100%;
  height: 100%;
  margin-bottom: $spacing-07;
}

img {
  max-width: 100%; //needed for svg/gif images
}

// images
.bx--row img {
  width: 100%;
}

